main.css
/* General */
* {
    margin: 0;
    padding: 0;
}
html, body {
    width: 100%;
    height: 100%;
    font-family: 'Lato', sans-serif;
}

.noselect {
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.clickable {
    cursor: pointer;
    cursor: hand;
}

/* My name and title */
.rotation-wrapper {
    position:absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 50%;
    overflow: hidden;
}

.liam-headers {
    position: absolute;
    width: 100%;
    /*top: 25px;*/
    /*left: 25px;*/
    font-family: 'Bree Serif', serif;
    font-size: 2em;
}

.bizarro-colors {
    background: #17334a;
    color: white;
}

.rotated {
    position: absolute;
    /*left: 25px;*/
    /*top: 300px;*/
    width: 100%;
    height: 100%;
    z-index: 3;
    transform-origin: top left;
    overflow: hidden;
}

bizarro-liam > h1, bizarro-liam > h2 {
    transform-origin: top left;
}

liam {
    z-index: 1;
}

.counter-rotation-wrapper {
    transform-origin: top left;
}

/* Setting margin or position will affect post-rotation position. */
.name {
    padding-top: 25px;
    padding-left: 35px;
}

/* Setting margin or position will affect post-rotation position. */
.title {
    padding-left: 35px;
    font-size: 1.34em;
}

/* Main Content */
.outer-wrapper {
    position: absolute;
    width: 100%;
    height: 100%;
}
.inner-wrapper {
    width: 90%;
    /*min-width: 700px;*/
    margin: 80px auto 0;

    padding-bottom: 100px;

    font-family: 'Lato', sans-serif;
    font-size: 1.2em;
}

.photo {
    /*position: absolute;*/
    /*float: right;*/
    width: 300px;
    height: 500px;
    margin: 0 auto;
    padding-top: 100px;
    z-index: -5;
    overflow: hidden;
}

.info {
    /*padding-top: 200px;*/
    /*position: absolute;*/
    /*width: 55%;*/
    /*margin: auto 0;*/
    padding-left: 10%;
    padding-right: 10%;
    margin-bottom: 30px;
}

/* Media Queries */

@media (min-width: 700px) {

    .rotation-wrapper {
        height: 33%;
    }

    .inner-wrapper {
        margin-top: 30px;
    }

    .photo {
        margin: 0;
        padding: 0;
        float: right;
    }

    .about {
        padding-top: 300px;
    }
}

@media (min-width: 700px and max-width: 1099px) {

    .info {
        padding-left: 3%;
    }
}

@media (min-width: 1100px) {

    .inner-wrapper {
        width: 98%;
        margin-left: 0;
    }

    .info {
        position: absolute;
        top: 250px;
        width: 23%;
        padding-left: 0;
        padding-right: 0;
    }
    
    .about {
        padding-top: 0;
        left: 2%;
        /*margin-left: 2%;*/
        /*margin-right: 62%;*/
    }

    .cv {
        left: 30%;
        /*margin-left: 45%;*/
    }

    .contact {
        left: 55%;
    }
}

